sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:3: error: not found: value getnombreValeurs
  val n = getnombreValeurs()
          ^