sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  val n = getnombreValeurs()
  var i = 0
  while(i != n-1)
  {
    if (plusPetit(i+1, i))
    	{
				trierJusquA(i)
      }	
    
    
    i += 1
  }
  
}

def trierJusquA(n:Int)
{
  var i = 0
  while (i != n-1)
  {
    if(plusPetit(i+1, i))
    {
      echange(i, i+1)
      trierJusquA(i)
    }
  }
}